crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__assert_stmt_recovery_0.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"assert\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assert(
                AssertStmt {
                    test: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 6,
                        end_line: 1,
                        end_column: 6,
                    },
                    if_cond: None,
                    msg: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 6,
        },
    ],
    comments: [],
}
