crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__assign_stmt_recovery_14.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"a.b[1:2] = 1\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [],
                    value: Node {
                        node: NumberLit(
                            NumberLit {
                                binary_suffix: None,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 11,
                        end_line: 1,
                        end_column: 12,
                    },
                    ty: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 12,
        },
    ],
    comments: [],
}
